# l1_dim_pruner

./: .gitignore  README.md  pyproject.toml
src/l1_dim_pruner/: pruner.py
tests/: test_pruner.py
