[tool.poetry]
name = "l1-dim-pruner"
version = "0.1.0"
description = ""
authors = ["Neil Ferguson"]
readme = "README.md"
packages = [{include = "l1_dim_pruner", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
